--- a/client/less/ui/help.less
+++ b/client/less/ui/help.less
@@ -56,7 +56,7 @@
       min-height: 0;
       border-radius: 0;
       border-color: @grey-5;
-      box-shadow: 1px 1px 3px 0 rgba(0,0,0,.5);
+      .ui-popover-box-shadow;
 
       &.bottom {
         top: 3rem;
@@ -147,4 +147,8 @@
       }
     }
   }
+}
+
+.ui-popover-box-shadow {
+  box-shadow: 1px 1px 3px 0 rgba(0,0,0,.5);
 }
